JS Loops Practice

--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Javascript Loops, Arrays and Objects</title>
+
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
-	<h2>Javascript Loops, Arrays and Objects</h2>
-	
-	<p> This is Paragraph </p>
-	<h3> This is heading Level 3 </h3>
-
-
 
 	<script type="text/javascript" src="js/scripts.js"></script>
 </body>
